first Hibernate query

--- a/bhp/src/main/resources/application.properties
+++ b/bhp/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jackson.serialization.fail-on-empty-beans=false
 
 spring.jpa.database=mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.defer-datasource-initialization=false
 
 
