--- a/bhp/src/main/resources/application.properties
+++ b/bhp/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.webflux.cors.allowed-headers= *
 spring.webflux.cors.max-age= 3600
 spring.webflux.cors.allow-credentials= true
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase5
+spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase6
 spring.datasource.username=root
 spring.datasource.password=Karma1992
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -17,7 +17,7 @@ spring.jackson.serialization.fail-on-empty-beans=false
 
 spring.jpa.database=mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=false
 
 
