--- a/bhp/src/main/resources/application.properties
+++ b/bhp/src/main/resources/application.properties
@@ -1,13 +1,9 @@
-spring.webflux.cors.allowed-origins= http://localhost:8081
-spring.webflux.cors.allowed-methods= GET, POST, PUT, DELETE
-spring.webflux.cors.allowed-headers= *
-spring.webflux.cors.max-age= 3600
-spring.webflux.cors.allow-credentials= true
-
 spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase7
 spring.datasource.username=root
 spring.datasource.password=Karma1992
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+logging.level.org.springframework.security = trace
 
 spring.jpa.properties.hibernate.format_sql=true
 
