read register from frontend

--- a/bhp/src/main/resources/application.properties
+++ b/bhp/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.password=Karma1992
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 logging.level.org.springframework.security = trace
+logging.level.org.springframework.context.annotation=DEBUG
+spring.componentscan.basePackages=com.example.bhp
 
 spring.jpa.properties.hibernate.format_sql=true
 
